--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ out/
 build/
 
 # Environment variables
-.env
-.env.local
+#.env
+#.env.local
 .env.development.local
 .env.test.local
 .env.production.local
