--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dexie": "^3.2.4",
     "dexie-react-hooks": "^1.1.7",
     "dotenv": "^17.2.2",
+    "form-data": "^4.0.4",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.294.0",
     "next": "14.2.5",
