--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@react-pdf/renderer": "^4.3.0",
+    "@react-pdf/renderer": "^4.3.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.38.0",
@@ -41,6 +41,7 @@
     "lucide-react": "^0.294.0",
     "next": "^14.2.33",
     "next-pwa": "^5.6.0",
+    "openai": "^6.7.0",
     "puppeteer": "^24.23.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
