--- a/package.json
+++ b/package.json
@@ -30,6 +30,14 @@
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.38.0",
     "@tanstack/react-query": "^5.8.4",
+    "@tiptap/extension-image": "^3.9.1",
+    "@tiptap/extension-link": "^3.9.1",
+    "@tiptap/extension-table": "^3.9.1",
+    "@tiptap/extension-table-cell": "^3.9.1",
+    "@tiptap/extension-table-header": "^3.9.1",
+    "@tiptap/extension-table-row": "^3.9.1",
+    "@tiptap/react": "^3.9.1",
+    "@tiptap/starter-kit": "^3.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
